{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 63,
  "lineage": "799bdac2-833f-02d0-86f7-096c449238d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:010922940107:internet-gateway/igw-0ae347d0386bc969d",
            "id": "igw-0ae347d0386bc969d",
            "owner_id": "010922940107",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "bedrock-rag-coffee-igw"
            },
            "tags_all": {
              "Name": "bedrock-rag-coffee-igw"
            },
            "vpc_id": "vpc-0933c2d712e4d01f9"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae347d0386bc969d",
            "id": "r-rtb-0247017410e61ccea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0247017410e61ccea",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:010922940107:route-table/rtb-0247017410e61ccea",
            "id": "rtb-0247017410e61ccea",
            "owner_id": "010922940107",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae347d0386bc969d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bedrock-rag-coffee-public-rt"
            },
            "tags_all": {
              "Name": "bedrock-rag-coffee-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0933c2d712e4d01f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099499d3970b74b53",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0247017410e61ccea",
            "subnet_id": "subnet-00bd769def284d39b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef18272e6268cb4f",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0247017410e61ccea",
            "subnet_id": "subnet-0b30a6130604fe854"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:010922940107:security-group/sg-0fc8c84d6cd029a96",
            "description": "Allow Postgres from allowlist",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc8c84d6cd029a96",
            "ingress": [
              {
                "cidr_blocks": [
                  "106.146.16.245/32"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bedrock-rag-coffee-db-sg",
            "name_prefix": "",
            "owner_id": "010922940107",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bedrock-rag-coffee-db-sg"
            },
            "tags_all": {
              "Name": "bedrock-rag-coffee-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0933c2d712e4d01f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:010922940107:subnet/subnet-00bd769def284d39b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bd769def284d39b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010922940107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "bedrock-rag-coffee-public-0"
            },
            "tags_all": {
              "Name": "bedrock-rag-coffee-public-0"
            },
            "vpc_id": "vpc-0933c2d712e4d01f9"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:010922940107:subnet/subnet-0b30a6130604fe854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30a6130604fe854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010922940107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "bedrock-rag-coffee-public-1"
            },
            "tags_all": {
              "Name": "bedrock-rag-coffee-public-1"
            },
            "vpc_id": "vpc-0933c2d712e4d01f9"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:010922940107:vpc/vpc-0933c2d712e4d01f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0c0071abfd383b275",
            "default_route_table_id": "rtb-0d3e7d9afa3c073a8",
            "default_security_group_id": "sg-0b780a3449d4d970d",
            "dhcp_options_id": "dopt-01625c445861e6e22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0933c2d712e4d01f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3e7d9afa3c073a8",
            "owner_id": "010922940107",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "bedrock-rag-coffee-vpc"
            },
            "tags_all": {
              "Name": "bedrock-rag-coffee-vpc"
            }
          }
        }
      ]
    }
  ]
}